--- a/index.html
+++ b/index.html
@@ -1,38 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Book-search </title>
-    <!-- custom css -->
-    <link rel="stylesheet" href="css/style.css">
-    <!-- bootsrap file -->
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Book-search </title>
+  <!-- custom css -->
+  <link rel="stylesheet" href="css/style.css">
+  <!-- bootsrap file -->
+  <link rel="stylesheet" href="css/bootstrap.min.css">
+
 </head>
+
 <body>
   <section class="container">
     <h2 class="text-center custom-color bg-green">Search your favorite book</h2>
 
-     <!-- book search area -->
-  <div class="input-group mb-3 w-50 mx-auto">
-    <input id="input-search" type="text" class="form-control" placeholder="Search your book" aria-label="Recipient's username" aria-describedby="button-addon2">
-    <button onclick="searchBook()" class="btn btn-outline-secondary" type="button" id="button-search ">Search</button>
-   </div>
-<!-- total number -->
-  <div >
-    <h5 class="text-center" id="total-result"></h5>
-  </div>
+    <!-- book search area -->
+    <div class="input-group mb-3 w-50 mx-auto">
+      <input id="input-search" type="text" class="form-control" placeholder="Search your book"
+        aria-label="Recipient's username" aria-describedby="button-addon2">
+      <button onclick="searchBook()" class="btn btn-outline-secondary" type="button" id="button-search ">Search</button>
+    </div>
 
-<!---book search result--->
+    <!-- total number -->
+    <div>
+      <h5 class="text-center" id="total-result"></h5>
+    </div>
+
+    <!---book search result--->
     <div id="search-result" class="row row-cols-1 row-cols-md-3 g-4">
     </div>
   </section>
-            <!-- js -->
+  <!-- js -->
   <script src="js/script.js"></script>
 
-            <!-- bootsrap file -->
+  <!-- bootsrap file -->
   <script src="js/bootstrap.bundle.min.js"></script>
 </body>
+
 </html>
