--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
   <section class="container">
-    <h2 class="text-center custom-color bg-green">Search your favorite book</h2>
+    <h2 class="text-center custom-color mt-5 bg-green">Search your favorite book</h2>
 
     <!-- book search area -->
     <div class="input-group mb-3 w-50 mx-auto">
