--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Book-search </title>
-  <!-- custom css -->
-  <link rel="stylesheet" href="css/style.css">
   <!-- bootsrap file -->
   <link rel="stylesheet" href="css/bootstrap.min.css">
+  <!-- custom css -->
+  <link rel="stylesheet" href="css/style.css">
 
 </head>
 
@@ -21,7 +21,7 @@
     <div class="input-group mb-3 w-50 mx-auto">
       <input id="input-search" type="text" class="form-control" placeholder="Search your book"
         aria-label="Recipient's username" aria-describedby="button-addon2">
-      <button onclick="searchBook()" class="btn btn-outline-secondary" type="button" id="button-search ">Search</button>
+      <button onclick="searchBook()" class="btn btn-outline-light" type="button" id="button-search ">Search</button>
     </div>
 
     <!-- total number -->
